# myshell

./: .gitignore  README.md  run_mysh.sh  run_tests.sh
source/: CMakeLists.txt  main.c  myutils.c  myutils.h
tests/: CMakeLists.txt  test_get_input.c  test_get_input.h  test_main.c  test_parse.c  test_parse.h  test_substitute_env_vars.c  test_substitute_env_vars.h
tests/get_input/: test2.txt  test3.txt
